--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="styles.css">
 
-    <link id="ico" rel="icon" type="iamge/png">
+    <link id="ico" rel="icon" type="image/png">
 
 </head>
 
